# tower-unite-suitebro

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/: OneItem
hexpats/: reload.ts  suitebro.hexpat
src/: byte_size.rs  lib.rs
src/gvas/: mod.rs
src/gvas/property/: array_property.rs  bool_property.rs  byte_property.rs  enum_property.rs  int_property.rs  mod.rs  name_property.rs  object_property.rs  str_property.rs  struct_property.rs
src/gvas/property/struct_property/struct_type/: colorable.rs  mod.rs  transform.rs
src/gvas/types/: bool.rs  fstring.rs  guid.rs  mod.rs
src/suitebro/: item.rs  mod.rs  property_map.rs
