[package]
name = "tower-suitebro"
version = "0.1.0"
edition = "2021"
default-run = "tower-unite-save"

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
binrw = "0.11.2"
gvas = { version = "0.7.1", features = ["serde"] }
indexmap = "1.9.3"
quick-xml = { version = "0.28.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unreal_helpers = "0.1.15"
