[package]
name = "tower-suitebro"
version = "0.1.0"
edition = "2021"
default-run = "tower-unite-save"

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
byteorder = "1.5.0"
quick-xml = { version = "0.28.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uesave = { path = "uesave-rs" }
uuid = { version = "1.6.1", features = ["serde"] }
indexmap = { version = "2.1.0", features = ["serde"] }